[gd_scene load_steps=5 format=2]

[ext_resource path="res://Boost/7.png" type="Texture" id=1]
[ext_resource path="res://PowerUps/PowerUps.gd" type="Script" id=2]
[ext_resource path="res://Music/Classic Arcade SFX/coins/Coin_7.wav" type="AudioStream" id=3]

[sub_resource type="RectangleShape2D" id=1]

[node name="PowerUps" type="Area2D" groups=["power_shield"]]
script = ExtResource( 2 )
velocity = Vector2( 0, 2 )
heal = 1

[node name="Sprite" type="Sprite" parent="."]
scale = Vector2( 0.15, 0.15 )
texture = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )
one_way_collision_margin = 0.0

[node name="collected" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 3 )

[connection signal="area_entered" from="." to="." method="_on_PowerUps_area_entered"]
[connection signal="finished" from="collected" to="." method="_on_collected_finished"]
